openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: imputo
  labels:
    app: imputo
spec:
  selector:
    app: imputo
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
